<resources>
    <string name="app_name">PhonebookPP</string>
    <string name="list_activity_title">Contact List</string>
    <string name="list_menu_add">Add Contact</string>
    <string name="list_menu_max">Report Maximums</string>
    <string name="detail_activity_title">Contact Details</string>
    <string name="detail_menu_edit">Edit Contact</string>
    <string name="detail_menu_add_number">Add Number</string>
    <string name="detail_menu_add_location">Add Location</string>
    <string name="detail_menu_delete_number">Delete Number</string>
    <string name="detail_menu_delete_location">Delete Location</string>
    <string name="detail_menu_delete_contact">Delete Contact</string>
    <string name="messaging_activity_title">SMS Messaging</string>
    <string name="messaging_placeholder">Your Message</string>
    <string name="messaging_send_button">Send</string>
    <string name="report_activity_title">Maximums</string>
</resources>
