<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ContactListActivity" >
    <item android:id="@+id/detail_menu_edit"
        android:title="@string/detail_menu_edit"
        android:orderInCategory="1"
        app:showAsAction="never" />
    <item android:id="@+id/detail_menu_add_number"
        android:title="@string/detail_menu_add_number"
        android:orderInCategory="2"
        app:showAsAction="never" />
    <item android:id="@+id/detail_menu_add_location"
        android:title="@string/detail_menu_add_location"
        android:orderInCategory="3"
        app:showAsAction="never" />
    <item android:id="@+id/detail_menu_delete_number"
        android:title="@string/detail_menu_delete_number"
        android:orderInCategory="4"
        app:showAsAction="never" />
    <item android:id="@+id/detail_menu_delete_location"
        android:title="@string/detail_menu_delete_location"
        android:orderInCategory="4"
        app:showAsAction="never" />
    <item android:id="@+id/detail_menu_delete_contact"
        android:title="@string/detail_menu_delete_contact"
        android:orderInCategory="4"
        app:showAsAction="never" />
</menu>
